--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,8 +20,8 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:0.20.+'
-    compile 'com.instabug.library:instabug:3+'
+    implementation 'com.facebook.react:react-native:0.20.+'
+    implementation 'com.instabug.library:instabug:3+'
 
 }
   
